--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "config": "^1.26.2",
+    "github": "^12.0.2",
     "joi": "^13.0.0",
     "jwt-decode": "^2.2.0",
     "kafka-node": "^2.2.3",
@@ -30,6 +31,9 @@
     "markdown-it": "^8.4.0",
     "moment": "^2.19.1",
     "mongoose": "^4.12.3",
+    "nodemailer": "^4.4.0",
+    "topcoder-api-challenges": "^1.0.5",
+    "topcoder-api-projects": "^1.0.1",
     "topcoder-dev-api-challenges": "^1.0.5",
     "topcoder-dev-api-projects": "^1.0.1",
     "winston": "^2.3.1"
