--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: node:latest
 
 variables:
   PORT: 3000
-  APP_TITLE: "Unternehmen Lüttich"
+  APP_TITLE: "Unternehmen Lüttich: Processor"
   NODE_ENV: development
 
 cache:
