--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
   "dependencies": {
     "axios": "^0.16.2",
     "config": "^1.26.2",
+    "get-parameter-names": "^0.3.0",
     "github": "^12.0.2",
     "joi": "^13.0.0",
     "jwt-decode": "^2.2.0",
-    "kafka-node": "^2.2.3",
+    "kafka-node": "^2.6.1",
     "lodash": "^4.17.4",
     "markdown-it": "^8.4.0",
     "moment": "^2.19.1",
@@ -37,6 +38,7 @@
     "topcoder-api-projects": "^1.0.1",
     "topcoder-dev-api-challenges": "^1.0.6",
     "topcoder-dev-api-projects": "^1.0.1",
+    "util": "^0.11.0",
     "winston": "^2.3.1"
   },
   "devDependencies": {
