fixes for https://github.com/topcoder-platform/topcoder-x-ui/issues/21

--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "github": "^12.0.2",
     "joi": "^13.0.0",
     "jwt-decode": "^2.2.0",
-    "kafka-node": "^2.6.1",
     "lodash": "^4.17.4",
     "markdown-it": "^8.4.0",
     "moment": "^2.19.1",
     "mongoose": "^4.12.3",
+    "no-kafka": "^3.2.10",
     "node-gitlab-api": "^2.2.6",
     "nodemailer": "^4.4.0",
     "topcoder-api-challenges": "^1.0.6",
