--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.16.2",
     "circular-json": "^0.5.7",
     "config": "^1.30.0",
+    "dynamoose": "^1.1.0",
     "fs-extra": "^7.0.0",
     "get-parameter-names": "^0.3.0",
     "github": "^12.1.0",
@@ -36,7 +37,6 @@
     "lodash": "^4.17.10",
     "markdown-it": "^8.4.1",
     "moment": "^2.22.2",
-    "mongoose": "^4.13.14",
     "no-kafka": "^3.2.10",
     "node-gitlab-api": "^2.2.8",
     "nodemailer": "^4.6.7",
