circleci integration with docker

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,6 +10,6 @@ WORKDIR /topcoder-x-processor
 # Install the dependencies from package.json
 RUN npm install
 #RUN npm run build
-RUN npm run test
+#RUN npm run test
 
 CMD npm start
