--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://gitlab.com/luettich/processor#README",
   "dependencies": {
+    "@topcoder-platform/topcoder-api-challenges-v4-wrapper": "^1.0.5",
     "@topcoder-platform/topcoder-api-challenges-v4-wrapper-dev": "^1.0.5",
     "axios": "^0.19.0",
     "circular-json": "^0.5.7",
