--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint . --ignore-pattern 'public/*' --ext .js --fix || true",
     "test": "mocha",
     "test:github": "mocha test/github.test.js",
-    "test:gitlab": "mocha test/gitlab.test.js"
+    "test:gitlab": "mocha test/gitlab.test.js",
+    "create-tables": "CREATE_DB=true node scripts/create-update-tables.js"
   },
   "engines": {
     "node": "~8.6.0"
