Preliminary Azure DevOps support

--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "no-kafka": "^3.2.10",
     "node-gitlab-api": "^2.2.8",
     "nodemailer": "^4.6.7",
+    "superagent": "^3.6.0",
+    "superagent-promise": "^1.1.0",
     "tc-core-library-js": "appirio-tech/tc-core-library-js.git#v2.6.3",
     "topcoder-api-challenges": "^1.0.6",
     "topcoder-api-projects": "^1.0.1",
