--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,9 @@
         "node": true,
         "mocha": true
     },
+    "plugins": [
+        "jsdoc"
+    ],
     "parserOptions": {
         "ecmaVersion": 8,
         "ecmaFeatures": {
@@ -43,6 +46,7 @@
             }
         ],
         "max-lines": 0,
-        "max-statements": 0
+        "max-statements": 0,
+        "valid-jsdoc": 0
     }
 }
