--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://gitlab.com/luettich/processor#README",
   "dependencies": {
+    "@gitbeaker/rest": "^39.12.0",
     "@octokit/rest": "^18.9.0",
     "axios": "^0.19.0",
     "circular-json": "^0.5.7",
@@ -40,7 +41,6 @@
     "markdown-it": "^8.4.1",
     "moment": "^2.22.2",
     "no-kafka": "^3.2.10",
-    "node-gitlab-api": "^2.2.8",
     "nodemailer": "^4.6.7",
     "superagent": "^3.6.0",
     "superagent-promise": "^1.1.0",
@@ -52,9 +52,11 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "eslint": "^8.47.0",
     "eslint-config-topcoder": "^2.0.0",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-chai-expect": "^1.1.1",
+    "eslint-plugin-jsdoc": "^46.5.0",
     "eslint-plugin-react": "^7.10.0",
     "gitlab": "^3.7.0",
     "mocha": "^5.2.0",
