--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "direct-connect-migration": "node scripts/direct-connect-migration.js"
   },
   "engines": {
-    "node": "~8.6.0"
+    "node": ">=20",
+    "npm": ">=9"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,7 @@
   },
   "homepage": "https://gitlab.com/luettich/processor#README",
   "dependencies": {
-    "@gitbeaker/rest": "^39.12.0",
+    "@gitbeaker/rest": "^39.13.0",
     "@octokit/rest": "^18.9.0",
     "axios": "^0.19.0",
     "circular-json": "^0.5.7",
