Additional logging and build fix for Docker 7 issues

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ install_dependency: &install_dependency
     sudo apt install jq
     sudo apt install python3-pip
     sudo pip3 install awscli --upgrade
+    sudo pip3 install docker==6.1.3
     sudo pip3 install docker-compose
 install_deploysuite: &install_deploysuite
   name: Installation of install_deploysuite.
